--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html><html lang="en-us" class="light"><head><meta charset="utf-8">
-<meta http-equiv="content-type" content="text/html">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!DOCTYPE html><html lang="en-us" class="light"><head><meta charset="utf-8" />
+<meta http-equiv="content-type" content="text/html" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title itemprop="name">Aufar&#39;s Recipe Compilation | Aufar&#39;s Recipe Compilation</title>
 <meta property="og:title" content="Aufar&#39;s Recipe Compilation | Aufar&#39;s Recipe Compilation" />
@@ -9,7 +9,7 @@
 <meta name="application-name" content="Aufar&#39;s Recipe Compilation | Aufar&#39;s Recipe Compilation" />
 <meta property="og:site_name" content="Aufar&#39;s Recipe Compilation" />
 
-<meta name="description" content="The recipes I collected over the years.">
+<meta name="description" content="The recipes I collected over the years." />
 <meta itemprop="description" content="The recipes I collected over the years." />
 <meta property="og:description" content="The recipes I collected over the years." />
 <meta name="twitter:description" content="The recipes I collected over the years." />
@@ -17,10 +17,13 @@
 <meta property="og:locale" content="en-us" />
 <meta name="language" content="en-us" />
 
-  <link rel="alternate" hreflang="en-gb" href="https://aufartirta.github.io/" title="" />
-
-
-
+<link
+    rel="alternate"
+    hreflang="en-gb"
+    href="https://aufartirta.github.io/"
+    title=""
+/>
+ 
 
 
 
