--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta http-equiv="content-type" content="text/html" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title itemprop="name">Aufar&#39;s Recipe Compilation | Aufar&#39;s Recipe Compilation</title>
+<title itemprop="name">Home | Aufar&#39;s Recipe Compilation</title>
 <meta property="og:title" content="Aufar&#39;s Recipe Compilation | Aufar&#39;s Recipe Compilation" />
 <meta name="twitter:title" content="Aufar&#39;s Recipe Compilation | Aufar&#39;s Recipe Compilation" />
 <meta itemprop="name" content="Aufar&#39;s Recipe Compilation | Aufar&#39;s Recipe Compilation" />
